fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/Top_10_Selling_Products__c.object-meta.xml
<CustomObject>
    <description>This object displays the top 10 Selling Products for the Account. The data is received from QAD and is displayed as a read only.</description>
    <label>Top 10 Selling Products</label>
    <nameField>
        <displayFormat>Top Ten -{0000000000}</displayFormat>
        <label>Top 10 Selling Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top 10 Selling Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>