fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Top 10 Selling Products</relationshipLabel>
    <relationshipName>Top_10_Selling_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>