fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>64</length>
    <type>Text</type>
</CustomField>