fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>64</length>
    <type>Text</type>
</CustomField>