fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Updated__c</fullName>
    <description>Date Updated</description>
    <label>Date Updated</label>
    <type>Date</type>
</CustomField>