fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Growth__c.field-meta.xml
<CustomField>
    <fullName>Growth__c</fullName>
    <formula>IF(Sales_Prior_Year__c = 0, Sales_YTD__c, Sales_YTD__c - (Sales_Prior_Year__c / 365 * ( datevalue(CreatedDate) - DATE(YEAR(TODAY()),1,1))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Growth $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>