fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Growth_pct__c.field-meta.xml
<CustomField>
    <fullName>Growth_pct__c</fullName>
    <formula>if(Sales_Prior_Year__c = 0, 1, Growth__c / Sales_Prior_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Growth %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>