fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Item_number__c.field-meta.xml
<CustomField>
    <fullName>Item_number__c</fullName>
    <description>Item Number</description>
    <label>Item #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>