fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Key_Temp__c.field-meta.xml
<CustomField>
    <fullName>Key_Temp__c</fullName>
    <formula>Account__r.SAP_Sold_To__c &amp; &quot;-&quot; &amp; Item_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Temp</label>
    <type>Text</type>
</CustomField>