fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Top 10 Selling Products</relationshipLabel>
    <relationshipName>Top_10_Selling_Products</relationshipName>
    <type>Lookup</type>
</CustomField>