fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <label>Product Class</label>
    <length>64</length>
    <type>Text</type>
</CustomField>