fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>Product  Description</description>
    <label>Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>