fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Product_Description_Compare__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_Compare__c</fullName>
    <formula>Product_Description__c = Product__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description Compare</label>
    <type>Checkbox</type>
</CustomField>