fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Product_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Group__c</fullName>
    <label>Product Sub Group</label>
    <length>64</length>
    <type>Text</type>
</CustomField>