fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Sales_Prior_Year__c.field-meta.xml
<CustomField>
    <fullName>Sales_Prior_Year__c</fullName>
    <description>Sales Prior Fiscal Year</description>
    <label>Sales Prior Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>