fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Sales_YTD__c.field-meta.xml
<CustomField>
    <fullName>Sales_YTD__c</fullName>
    <description>Sales Year To Date (YTD)</description>
    <label>Sales YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>