fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <externalId>true</externalId>
    <label>SAP Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>