fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Top 10 Selling Products</relationshipLabel>
    <relationshipName>Top_10_Selling_Products</relationshipName>
    <type>Lookup</type>
</CustomField>