fullSandbox11072023/force-app/main/default/objects/Top_10_Selling_Products__c/listViews/X353535.listView-meta.xml
<ListView>
    <fullName>X353535</fullName>
    <columns>Account__c</columns>
    <columns>Item_number__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Sales_YTD__c</columns>
    <columns>Sales_Prior_Year__c</columns>
    <columns>Date_Updated__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>01tE0000007suJA</value>
    </filters>
    <label>353535</label>
    <language>en_US</language>
</ListView>